# LightSEAL

./: .gitignore  CMakeLists.txt  README.md  install.sh  install_origin.sh  install_sgx.sh
CMakeCaches/: CMakeCache_cpu.txt  CMakeCache_sgx.txt
cmake/: SEALConfig.cmake.in  SEALMacros.cmake
native/mytest/: CMakeLists.txt  sealtest.cpp
native/origin/seal/: CMakeLists.txt  ciphertext.cpp  ciphertext.h  context.cpp  context.h  decryptor.cpp  dynarray.h  evaluator.cpp  evaluator.h  keygenerator.h  plaintext.h  publickey.h  seal.h  secretkey.h  valcheck.cpp
native/origin/seal/util/: CMakeLists.txt  blake2xb.c  config.h.in  globals.cpp  iterator.h  rlwe.cpp
native/sgx/seal/: CMakeLists.txt  ciphertext.cpp  ciphertext.h  ckks.cpp  ckks.h  context.cpp  context.h  decryptor.cpp  decryptor.h  dynarray.h  encryptionparams.h  encryptor.cpp  encryptor.h  evaluator.cpp  evaluator.h  keygenerator.cpp  kswitchkeys.h  modulus.h  plaintext.cpp  plaintext.h  publickey.h  seal.h  secretkey.h  valcheck.cpp  valcheck.h
native/sgx/seal/util/: CMakeLists.txt  globals.cpp  polyarithsmallmod.cpp  polyarithsmallmod.h  polycore.h  rlwe.cpp  rlwe.h  rns.cpp  rns.h  uintarith.cpp  uintarith.h  uintcore.h  ztools.h
native/src/seal/: CMakeLists.txt  ciphertext.h  context.cpp  context.h  decryptor.cpp  dynarray.h  encryptionparams.cpp  encryptionparams.h  encryptor.cpp  encryptor.h  keygenerator.cpp  keygenerator.h  kswitchkeys.cpp  modulus.cpp  modulus.h  plaintext.h  publickey.h  randomgen.cpp  randomgen.h  seal.h  secretkey.h  valcheck.h
native/src/seal/util/: CMakeLists.txt  blake2b.c
